<resources>
    <string name="app_name">Cyclist</string>
    <string name="action_settings">Settings</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_rationale">Let #Cyclist to use your location and contacts to work</string>
    <string name="permission_denied_explanation">Without your permission for location and contacts #Cyclist cannot work</string>
    <string name="settings">Settings</string>
    <string name="activity">Your activity</string>

    <string name="speed_units" translatable="false">Km/h</string>
    <string name="distance_units" translatable="false">m.</string>

    <string name="about_icons">Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY</string>

    <string name="test" translatable="false">More than 50</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="nodata" translatable="false">~</string>
    <integer name="value_nodata" translatable="false">-999</integer>

    <string name="cycling" translatable="false">Cycling:</string>
    <string name="title_activity_session" translatable="false">SessionActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="avatar_label">Cyclist</string>
    <string name="avatar_email" translatable="false">cyclist@geo-c.eu</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_play">Play</string>
    <string name="menu_board">Leaderboard</string>
    <string name="error_function_not_available">Sorry, you can\'t do this yet.</string>
    <string name="action_fitness_text">We are using your fitness data</string>
    <string name="action_location_text">We are using your location</string>
    <string name="action_fitness_text_error">Sorry, We cannot access your fitness data</string>
    <string name="profile_name">Avatar name</string>
    <string name="profile_email" translatable="false">name@ma.il</string>
    <string name="profile_male">Male</string>
    <string name="profile_female">Female</string>
    <string name="profile_age">Age (Years)</string>
    <string name="profile_age_0_20">Less than 20</string>
    <string name="profile_age_20_30">20 - 30</string>
    <string name="profile_age_30_40">30 - 40</string>
    <string name="profile_age_40_50">40 - 50</string>
    <string name="profile_age_50_">More than 50</string>
    <string name="about_cyclist">#Ciclist belongs to the research project \"Mobile services for green living\". It is an experiment without any commercial motivation. Research team kindly thank your participation.</string>
    <string name="about_geoc">The Geo-C European Joint Doctorate in Geoinformatics aims to enable open smart cities. For more information about the project go to www.geo-c.eu</string>

    <string name="dashboard_trip_label">Trips</string>
    <string name="dashboard_day_label">Day</string>
    <integer name="dashboard_campaign_length" translatable="false">7</integer>
    <string name="dashboard_goal_label">Your goal:</string>
    <string name="dashboard_goal_default" translatable="false">1</string>
    <string name="dashboard_goal_units" translatable="false">Km.</string>
    <string name="profile_bike_shared">Shared or Public</string>
    <string name="tag_log" translatable="false">Cyclist</string>
    <string name="notification_title">Pedaling the city</string>
    <string name="notification_text">Tag your trip when arrived</string>
    <string name="text_no_set" translatable="false">Not Set</string>
    <string name="menu_survey">Survey</string>
    <string name="dashboardScoreFragment_label" translatable="false">Score</string>

    <string name="speed_label">Speed:</string>


    <string-array name="tag_array_1">
        <item>Fast</item>
        <item>Moderated</item>
        <item>Slow-moving</item>
        <item>Inspiring</item>
        <item>Relaxed</item>
        <item>Dull</item>
        <item>Safe</item>
        <item>Dangerous</item>
    </string-array>

    <string-array name="tag_array_2">
        <item>Quick</item>
        <item>Normal</item>
        <item>Time-consuming</item>
        <item>Light</item>
        <item>Worthy</item>
        <item>Crowded</item>
        <item>Secure</item>
        <item>Risky</item>
    </string-array>

    <string-array name="tag_array_3">
        <item>Speedy</item>
        <item>Average</item>
        <item>Brake-intensive</item>
        <item>Efficient</item>
        <item>Enough</item>
        <item>Disconnected</item>
        <item>Sheltered</item>
        <item>Hazardous</item>
    </string-array>
    <string name="tag_add">New tag</string>
    <string name="tag_cancel">Cancel</string>
    <string name="dashboard_time_label">Time</string>
    <string name="dashboard_default_cero" translatable="false">0</string>
    <string name="dashboard_default_one" translatable="false">1</string>
    <string name="dashboard_default_nodata" translatable="false">-</string>
    <string name="trip_counter_tag" translatable="false">trip_count</string>
    <string name="trip_start_date_tag" translatable="false">trip_start</string>
    <string name="trip_class_parse" translatable="false">Cyclist_Trip</string>
    <string name="trip_stop_date_tag" translatable="false">trip_stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="leaderboardFragment_label" translatable="false">leaderboard</string>
    <string name="leaderboard_trips_label0">rides</string>
    <string name="leaderboard_label1">With your:</string>
    <string name="leaderboard_label2">out of</string>
    <string name="leaderboard_trips_top_label">Top: Rides</string>
    <string name="leaderboard_tags_top_label">Top: Tags</string>
    <string name="createdAt_tag" translatable="false">createdAt</string>
    <string name="tag_choose">Choose one tag</string>
    <string name="tags_class_parse" translatable="false">Cyclist_Tag</string>
    <string name="text_tag" translatable="false">text</string>
    <string name="tags_counter_tag" translatable="false">tag_coung</string>
    <string name="leaderboard_tags_label0">tags</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_score">Score</string>
    <string name="experiment_status_tag" translatable="false">experimentStatus</string>
    <string name="experiment_profile_tag" translatable="false">experimentProfile</string>
    <string name="experiment_profile_competition" translatable="false">competition</string>
    <string name="experiment_profile_collaboration" translatable="false">collaboration</string>
    <string name="experiment_class_parse" translatable="false">Cyclist_Experiment</string>
    <string name="profile_tag" translatable="false">profile</string>
    <string name="log_text_tag" translatable="false">log_text</string>
    <string name="log_record_class_parse" translatable="false">Cyclist_Log</string>
    <string name="app_service_description">Cyclist, this service enables location, speed, and distance updates on the app</string>
    <string name="notification_channel_id" translatable="false">Cyclist_channel</string>
    <string name="trip_end_point_tag" translatable="false">end_point</string>
    <string name="trip_point_type_tag" translatable="false">trip_point_type</string>
    <string name="trip_start_point_tag" translatable="false">start_point</string>
    <string name="trip_start_latitude_tag" translatable="false">start_latitude</string>
    <string name="trip_start_longitude_tag" translatable="false">start_longitude</string>
    <string name="trip_end_latitude_tag" translatable="false">end_latitude</string>
    <string name="trip_end_longitude_tag" translatable="false">end_longitude</string>
    <integer name="leader_board_buffer_distance_km" translatable="false">50</integer>

</resources>
