<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_menu_play"
            android:title="@string/menu_play" />
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_menu_score"
            android:title="@string/menu_score" />
        <item
            android:id="@+id/nav_leader_board"
            android:icon="@drawable/ic_menu_board"
            android:title="@string/menu_board" />
        <item
            android:id="@+id/nav_survey"
            android:icon="@drawable/ic_menu_survey"
            android:title="@string/menu_survey"
            android:enabled="false"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>

    <item android:title="@string/menu_settings">
        <menu>

        </menu>
    </item>

</menu>
