<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SessionActivity"
    tools:showIn="@layout/app_bar_session"
    android:id="@+id/start_activity_view">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_centerInParent="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grid_location"
            android:columnCount="2"
            android:rowCount="4"
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/sample_logview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/latitude"
                android:id="@+id/label_latitude"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/nodata"
                android:id="@+id/value_latitude"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_marginLeft="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/longitude"
                android:id="@+id/label_longitude"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/nodata"
                android:id="@+id/value_longitude"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_marginLeft="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/altitude"
                android:id="@+id/label_altitude"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/nodata"
                android:id="@+id/value_altitude"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_marginLeft="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cycling"
                android:id="@+id/label_cylcing"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/nodata"
                android:id="@+id/value_cycling"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_marginLeft="30dp" />
        </GridLayout>

        <geoc.uji.esr7.mag_ike.common.logger.LogView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:maxLines="20"
            android:textIsSelectable="true" />

    </RelativeLayout>

</RelativeLayout>