<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="geoc.uji.esr7.mag_ike.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/logo_geoc"
            android:cropToPadding="false"
            android:layout_height="150dp"
            android:layout_marginTop="30dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_above="@+id/logo_marie_curie"
            android:layout_below="@+id/logo_geoc">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/about_cyclist"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/about_cyclist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="@android:style/Widget.DeviceDefault.Light.Button.Small"
                    android:text="@string/about_geoc"
                    android:id="@+id/about_geoc"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:textColor="?android:attr/textColorTertiary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="@android:style/Widget.DeviceDefault.Light.Button.Small"
                    android:text="@string/about_icons"
                    android:id="@+id/about_icons"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:textColor="?android:attr/textColorTertiary" />

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/ic_marie_curie"
            android:id="@+id/logo_marie_curie"
            android:layout_height="50dp"
            android:baselineAlignBottom="false"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp" />


    </RelativeLayout>

</FrameLayout>
