<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="geoc.uji.esr7.mag_ike.DashboardFragment"
    android:id="@+id/start_activity_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/grid_campaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="70dp"
            android:columnCount="2"
            android:rowCount="2"
            android:useDefaultMargins="false">

            <TextView
                android:id="@+id/tv_trips_label"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dashboard_trip_label" />

            <TextView
                android:id="@+id/tv_trips"
                style="@style/BigNumber"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/dashboard_default_one" />

            <TextView
                android:id="@+id/tv_day_label"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:text="@string/dashboard_day_label" />

            <TextView
                android:id="@+id/tv_day"
                style="@style/BigNumber"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_row="1"
                android:text="@string/dashboard_default_one" />

        </GridLayout>

        <GridLayout
            android:id="@+id/grid_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/label_tag_3"
                style="@style/UnitsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="#"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/label_tag_2"
                style="@style/UnitsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="#"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/label_tags_1"
                style="@style/UnitsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="#"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark" />

            <Spinner
                android:id="@+id/sp_tag_1"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_row="0"
                android:backgroundTint="@color/colorPrimaryDark" />

            <Spinner
                android:id="@+id/sp_tag_2"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_row="1"
                android:backgroundTint="@color/colorPrimaryDark" />

            <Spinner
                android:id="@+id/sp_tag_3"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_row="2"
                android:backgroundTint="@color/colorPrimaryDark" />


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:columnCount="2">

            <ImageView
                android:id="@+id/gauge"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="false"
                app:srcCompat="@drawable/ic_speed_bywalking" />

            <GridLayout
                android:id="@+id/grid_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:animateLayoutChanges="true"
                android:columnCount="1"
                android:rowCount="2">

                <TextView
                    android:id="@+id/tv_time_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:text="@string/dashboard_time_label" />

                <Chronometer
                    android:id="@+id/chronometer_session"
                    style="@style/SmallNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_row="1" />

            </GridLayout>
        </GridLayout>


    </RelativeLayout>

</FrameLayout>
